# yolox_sample

./: .gitignore  .gitmodules  READEME.md  README.md  pyproject.toml
src/: dataset_downloader.py  experiment.py
src/const/: const_values.py
